fixed overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,13 @@
-html,
+* {
+
+}
+
 body {
   background-color: #efefef;
   color: #0a1931;
 
-  padding: 0;
-  margin: 0;
+  max-width: 100%;
+
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -25,10 +28,9 @@ a {
   justify-content: space-between;
 
   height: 70px;
-  width: 100vw;
+  width: 100%;
   background-color: #185ADB;
   color: #fff;
-  margin: 10px;
   border-radius: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
@@ -91,24 +93,14 @@ a {
   text-decoration: none;
 }
 
-/* -------------------- Navbar -------------------- */
-
-/* .navbar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-} */
-
 .navbar img {
   border-radius: 50%;
   width: 50px;
   height: 50px;
   cursor: pointer;
 }
+
+/* -------------------- Navbar -------------------- */
 
 /* Buttons
 .btn, button {
